# AMM.c

./: CMakeLists.txt  Makefile  Readme.md  tmp_test.c
.github/workflows/: tests_on_push.yml
experiments/: amm-experiments.asd
include/: amm_dtype.h  argsort.h  ndarray.h  original_maddness.h  utils.h
include/kernels/: comm_original_maddness.h  common_encoder.hpp  common_kernel.h
src/: amm_dtype.c  argsort.c  encoding.c  encoding.cpp  maddness.c  maddness.cpp  ndarray.c  original_maddness.c
src/kernels/arm64/: CMakeLists.txt  original_maddness.c
src/kernels/naive/: CMakeLists.txt  encoder.c  encoder.cpp  original_maddness.c
tests/: CMakeLists.txt  test_amm1.c  test_ndarray.c
